RESOLVED FIXED 184848
HTML String load cannot be prevented by responding 'Cancel' asynchronously in decidePolicyForNavigationAction
https://bugs.webkit.org/show_bug.cgi?id=184848
Summary HTML String load cannot be prevented by responding 'Cancel' asynchronously in...
Chris Dumez
Reported 2018-04-20 15:54:35 PDT
HTML String load cannot be prevented by responding 'Cancel' asynchronously in decidePolicyForNavigationAction.
Attachments
Patch (5.86 KB, patch)
2018-04-20 16:10 PDT, Chris Dumez
no flags
Patch (8.74 KB, patch)
2018-04-20 16:59 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.25 MB, application/zip)
2018-04-20 18:59 PDT, EWS Watchlist
no flags
Patch (11.61 KB, patch)
2018-04-20 21:13 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews103 for mac-sierra (2.34 MB, application/zip)
2018-04-20 22:18 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews116 for mac-sierra (3.13 MB, application/zip)
2018-04-20 23:27 PDT, EWS Watchlist
no flags
Patch (11.74 KB, patch)
2018-04-23 08:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-04-20 15:54:54 PDT
Chris Dumez
Comment 2 2018-04-20 16:10:51 PDT
Chris Dumez
Comment 3 2018-04-20 16:59:42 PDT
EWS Watchlist
Comment 4 2018-04-20 18:59:49 PDT
Comment on attachment 338493 [details] Patch Attachment 338493 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/7390883 New failing tests: fast/events/beforeunload-alert-user-interaction2.html webarchive/loading/javascript-url-iframe-crash.html fast/events/beforeunload-alert.html
EWS Watchlist
Comment 5 2018-04-20 18:59:51 PDT
Created attachment 338508 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Chris Dumez
Comment 6 2018-04-20 21:13:44 PDT
EWS Watchlist
Comment 7 2018-04-20 22:18:11 PDT
Comment on attachment 338518 [details] Patch Attachment 338518 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7393468 New failing tests: webarchive/loading/javascript-url-iframe-crash.html
EWS Watchlist
Comment 8 2018-04-20 22:18:12 PDT
Created attachment 338521 [details] Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 9 2018-04-20 23:27:17 PDT
Comment on attachment 338518 [details] Patch Attachment 338518 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/7393675 New failing tests: webarchive/loading/javascript-url-iframe-crash.html
EWS Watchlist
Comment 10 2018-04-20 23:27:18 PDT
Created attachment 338523 [details] Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
Chris Dumez
Comment 11 2018-04-23 08:58:01 PDT
Chris Dumez
Comment 12 2018-04-23 13:50:02 PDT
Comment on attachment 338589 [details] Patch Clearing flags on attachment: 338589 Committed r230919: <https://trac.webkit.org/changeset/230919>
Chris Dumez
Comment 13 2018-04-23 13:50:06 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 14 2018-04-23 17:50:43 PDT
This change appears to have caused the flaky failures seen with the fast/events/beforeunload tests seen here: https://build.webkit.org/results/Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r230928%20(4164)/results.html
Chris Dumez
Comment 15 2018-04-23 18:44:48 PDT
(In reply to Ryan Haddad from comment #14) > This change appears to have caused the flaky failures seen with the > fast/events/beforeunload tests seen here: > https://build.webkit.org/results/ > Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r230928%20(4164)/results.html Ok, looking now. The tests probably need updating.
Chris Dumez
Comment 16 2018-04-23 18:49:16 PDT
(In reply to Chris Dumez from comment #15) > (In reply to Ryan Haddad from comment #14) > > This change appears to have caused the flaky failures seen with the > > fast/events/beforeunload tests seen here: > > https://build.webkit.org/results/ > > Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r230928%20(4164)/results.html > > Ok, looking now. The tests probably need updating. As I thought. I will update the tests shortly.
Chris Dumez
Comment 17 2018-04-23 19:30:55 PDT
(In reply to Chris Dumez from comment #16) > (In reply to Chris Dumez from comment #15) > > (In reply to Ryan Haddad from comment #14) > > > This change appears to have caused the flaky failures seen with the > > > fast/events/beforeunload tests seen here: > > > https://build.webkit.org/results/ > > > Apple%20High%20Sierra%20Release%20WK2%20(Tests)/r230928%20(4164)/results.html > > > > Ok, looking now. The tests probably need updating. > > As I thought. I will update the tests shortly. https://trac.webkit.org/r230939
Note You need to log in before you can comment on or make changes to this bug.